/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "RMNotificationProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

////////////////////////////////////////////////////////////////////////
////// RM NotificationsManager related records /////////////////////////
////////////////////////////////////////////////////////////////////////
enum NotificationTypeProto {
    RM_CONTAINER_ALLOCATED = 1;
}

message NotificationProto {
    required NotificationTypeProto notification_type = 1;
}

message NotificationResponseProto {
    optional bool notification_received = 1;
}

service RMNotificationProtocolService {
  rpc handleRMNotification (NotificationProto) returns (NotificationResponseProto);
}
